[IFC] Misplaced out-of-flow box with static positioning https://bugs.webkit.org/show_bug.cgi?id=261168

Reviewed by Antti Koivisto.

This inner loop was supposed to check runs between the previous checkpoint (previous out-of-flow box) and the current out-of-flow box.
(i.e the outer loop jumps from out-of-flow box to out-of-flow box while the inner loop checks inflow boxes in-between)

* LayoutTests/fast/inline/block-level-out-of-flow-boxes-with-inline-sibling.html: Added.
* LayoutTests/fast/inline/mispositioned-block-level-out-of-flow-boxes-with-inline-sibling-expected.html: Added.
* LayoutTests/fast/inline/mispositioned-block-level-out-of-flow-boxes-with-inline-sibling.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::setGeometryForBlockLevelOutOfFlowBoxes):

Canonical link: https://commits.webkit.org/267670@main